# kokoro-tui

./: .gitignore  README.md  pyproject.toml
src/: app.tcss  lib.py  main.py
src/lib/: __init__.py  screens.py  widgets.py
src/lib/agents/: __init__.py  kokoro.py  sound.py
